Argocd/prod/dummy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dummy-prod-ingress
  namespace: dummy-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dummy-prod.klimdos.cf
    http:
      paths:
      - backend:
          serviceName: dummy-prod-svc
          servicePort: 80
        # path: /
